--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 default = ["webgl2"]
 webgpu = ["bevy/webgpu"]
 webgl2 = ["bevy/webgl2"]
+hdr = []
 
 [dependencies]
 bevy = { version = "0.14.0", default-features = false, features = [
