Cache github action build artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Setup Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
 
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2
+
       - name: Install dependencies (Linux)
         if: runner.os == 'Linux'
         run: |
@@ -50,6 +53,9 @@ jobs:
         with:
           target: wasm32-unknown-unknown
 
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2
+
       - name: Build library for wasm
         run: cargo build --target wasm32-unknown-unknown --no-default-features --features ${{ matrix.feature }}
         env:
@@ -72,6 +78,9 @@ jobs:
         with:
           components: clippy
 
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2
+
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -86,21 +95,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        include:
-          - os: ubuntu-latest
-            example: ci_screenshots
-            output: test_images/000.png
-          - os: windows-latest
-            example: ci_screenshots
-            output: test_images/000.png
-          - os: macos-latest
-            example: ci_screenshots
-            output: test_images/000.png
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
+
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Install dependencies (Linux)
         if: runner.os == 'Linux'
@@ -109,22 +112,22 @@ jobs:
           sudo apt-get install -y g++ pkg-config libx11-dev libasound2-dev libudev-dev libxkbcommon-x11-0 libwayland-dev libxkbcommon-dev xvfb libgl1-mesa-dri libglx-mesa0
 
       - name: Build headless example
-        run: cargo build --example ${{ matrix.example }}
+        run: cargo build --example ci_screenshots
 
       - name: Run headless example (Linux)
         if: runner.os == 'Linux'
-        run: xvfb-run cargo run --example ${{ matrix.example }}
+        run: xvfb-run cargo run --example ci_screenshots
 
       - name: Run headless example (Windows/macOS)
         if: runner.os != 'Linux'
-        run: cargo run --example ${{ matrix.example }}
+        run: cargo run --example ci_screenshots
 
       - name: Check output file exists
         shell: bash
-        run: test -f ${{ matrix.output }}
+        run: test -f test_images/000.png
 
       - name: Upload screenshot artifact
         uses: actions/upload-artifact@v4
         with:
           name: headless-render-screenshot-${{ matrix.os }}
-          path: ${{ matrix.output }}
+          path: test_images/000.png
